# mtbank-ai-call-analytics

./: .dockerignore  .env.example  .gitattributes  .gitignore  README.md  alembic.ini  docker-compose.cloudflare.yml  docker-compose.gpu.yml  docker-compose.runpod.yml  docker-compose.websocket.yml  docker-compose.yml  openwebui_wrapper.py  pipeline.py  pyproject.toml  pyrightconfig.json
.claude/ralph/: release-115.md
.github/workflows/: ci.yml  competitive-benchmark.yml  e2e-real.yml  gpu-benchmark.yml
artifacts/: competitive-analysis-current.json  competitive-analysis-final.json
audio/samples/: README.md
deploy/runpod/: README.md  env.example
docker/: app.Dockerfile  speech.cpu.Dockerfile  speech.gpu.Dockerfile
docker/wheelhouse/: .gitkeep
docs/: api.md  architecture.md  competitive-analysis.md  evals.md  operations.md  privacy.md  release-checklist.md  threat-model.md
docs/adr/: 0001-openwebui-attachment-pipeline.md  0002-canonical-batch-speech.md  0003-bounded-openai-agent-runtime.md  (+1 more)
gateway/: nginx.conf
models/: .gitkeep  manifest.json
monitoring/: otel-collector.yml  prometheus.yml  tempo.yml
pipelines/: auth_wrapper.py
release/: gate-manifest.json  live-websocket-benchmark.json  synthetic-remote-audio-approval.json
scripts/: analyze_competitors.py  assert_runtime_logs_clean.py  check_release_gate.py  check_release_static.py  competitor_common.py  evaluate_canonical_speech.py  evaluate_groq_stt.py  evaluate_speech.py  export_release_evidence.py  fetch_competitor_metadata.py  generate_speech_manifest.py  generate_synthetic_dataset.py  generate_transport_fixtures.py  model_capability_bootstrap.py  normalize_audio_deterministic.py  openwebui_attachment_e2e.py  openwebui_guard_e2e.py  openwebui_image_sink_contract.py  pipelines_auth_e2e.py  provision_cloudflare_tunnel.py  provision_speech_models.py  release_real_e2e.py  run_gpu_speech_benchmark.py  run_local_speech_sla_benchmark.py  run_public_analyze_sla_benchmark.py  run_websocket_benchmark.py  validate_runtime_secrets.py  validate_test_manifest.py
services/: __init__.py
services/speech/: __init__.py  adapters.py  app.py  dependency-manifest.json  engine.py  errors.py  manifest.py  media.py  model-sources.json  ports.py  pyproject.toml  runtime.py  settings.py  streaming.py
test_data/: PROVENANCE.md  REFERENCES.md  manifest.yaml
(+169 files in other folders)
