[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "mtbank-ai"
version = "0.0.0"
description = "Фундамент речевой аналитики контакт-центра МТБанка"
requires-python = ">=3.11"
dependencies = [
  "alembic==1.18.5",
  "asyncpg==0.31.0",
  "fastapi==0.139.0",
  "httpcore==1.0.9",
  "httpx==0.28.1",
  "openai==2.11.0",
  "opentelemetry-api==1.31.1",
  "opentelemetry-sdk==1.31.1",
  "pydantic>=2.13,<3",
  "pydantic-settings==2.14.2",
  "python-multipart>=0.0.32,<1",
  "sqlalchemy==2.0.51",
  "starlette==1.3.1",
  "uvicorn>=0.51,<1",
  "websockets==16.0",
]

[project.optional-dependencies]
test = [
  "httpx==0.28.1",
  "pytest>=8.3,<10",
]

[dependency-groups]
dev = [
  "httpx==0.28.1",
  "pyright>=1.1.404,<2",
  "pytest>=8.3,<10",
  "ruff>=0.12,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"mtbank_ai.agents.classifier" = ["prompt.md"]
"mtbank_ai.agents.compliance" = ["prompt.md"]
"mtbank_ai.agents.quality" = ["prompt.md"]
"mtbank_ai.agents.summarizer" = ["prompt.md"]
"mtbank_ai.agents.trends" = ["prompt.md"]
"mtbank_ai.policies.compliance" = ["v1.yaml"]
"mtbank_ai.policies.quality" = ["v1.yaml"]
"mtbank_ai.policies.roles" = ["v1.yaml"]
"mtbank_ai.policies.taxonomy" = ["v1.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
addopts = "-ra"
markers = [
  "integration: requires disposable external services such as PostgreSQL or OpenWebUI",
  "real_llm: requires configured real cloud gateway, models and non-synthetic trace evidence",
  "gpu: requires a self-hosted GPU runner, local models and benchmark evidence",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
