[project]
name = "mtbank-canonical-speech"
version = "0.1.0"
description = "Internal Groq batch ASR and local pyannote diarization service"
requires-python = ">=3.11,<3.13"
dependencies = [
  "faster-whisper==1.2.1",
  "fastapi==0.139.0",
  "httpx==0.28.1",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "pyannote.audio==4.0.7",
  "python-multipart==0.0.32",
  "torch==2.8.0",
  "uvicorn==0.51.0",
  "websockets==16.0",
]

[tool.uv]
package = false
